--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "src",
+  "name": "js-game",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "author": "",
   "license": "ISC"
